--- a/debug/dev.ipynb
+++ b/debug/dev.ipynb
@@ -12166,57 +12166,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#  Get all \"matmul\" or \"gemm\" nodes\n",
     "value_dict\n",
-    "matmul_nodes = [parse_gemmnode(node, value_dict=value_dict, param_dict=param_dict) for node in onnx_model.graph.node if \"MatMul\" in node.op_type]"
+    "matmul_nodes = [node for node in onnx_model.graph.node if \"MatMul\" in node.op_type]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[]),\n",
-       " ParsedModel(op_type='MatMul', input_shapes=[(1, 6), (6, 50257)], output_shapes=[(1, 50257)], macs=301542, attribute=[], param_shapes=[(768, 50257)])]"
+       "name: \"/transformer/Reshape_1_output_0\"\n",
+       "type {\n",
+       "  tensor_type {\n",
+       "    elem_type: 1\n",
+       "    shape {\n",
+       "      dim {\n",
+       "        dim_value: 1\n",
+       "      }\n",
+       "      dim {\n",
+       "        dim_value: 6\n",
+       "      }\n",
+       "      dim {\n",
+       "        dim_value: 768\n",
+       "      }\n",
+       "    }\n",
+       "  }\n",
+       "}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "matmul_nodes"
+    "value_dict[reformat_name(matmul_nodes[-1].input[0])]"
    ]
   },
   {
@@ -12266,9 +12258,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'/transformer/h.0/Add_1_output_0'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[32], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mvalue_dict\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/transformer/h.0/Add_1_output_0\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n",
+      "\u001b[0;31mKeyError\u001b[0m: '/transformer/h.0/Add_1_output_0'"
+     ]
+    }
+   ],
    "source": [
     "value_dict['/transformer/h.0/Add_1_output_0']"
    ]
