--- a/examples/parse_gpt2.ipynb
+++ b/examples/parse_gpt2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,20 @@
      "output_type": "stream",
      "text": [
       "The attention mask and the pad token id were not set. As a consequence, you may observe unexpected behavior. Please pass your input's `attention_mask` to obtain reliable results.\n",
-      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712afdc0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fd3fac0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3040>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3130>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3760>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3610>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3490>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3340>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3250>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3940>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3d90>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3ac0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a34c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3520>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fe6e760>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fe6e400>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fe6de20>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fe6d910>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071a52b80>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071a52be0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e672b0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67be0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e670d0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e671c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67700>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67fd0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e675e0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e670a0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67d00>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e677c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67fa0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67820>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e673d0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67670>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e676d0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67100>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67310>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e675b0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67b50>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e678e0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67b80>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67970>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e678b0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67790>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67730>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67940>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67130>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67370>, Linear(in_features=768, out_features=50257, bias=False): <torch.utils.hooks.RemovableHandle object at 0x7f3071e673a0>}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
       "/home/jeffjw/anaconda3/envs/DWG/lib/python3.8/site-packages/transformers/generation/utils.py:1132: UserWarning: Using the model-agnostic default `max_length` (=20) to control the generation length. We recommend setting `max_new_tokens` to control the maximum length of the generation.\n",
       "  warnings.warn(\n"
      ]
@@ -56,6 +69,26 @@
     "model_name = \"gpt2\"\n",
     "model = GPT2LMHeadModel.from_pretrained(model_name)\n",
     "tokenizer = GPT2Tokenizer.from_pretrained(model_name)\n",
+    "\n",
+    "# Attach hook\n",
+    "def store_input_hook(module, input, output):\n",
+    "    module.input_hooked = input\n",
+    "\n",
+    "model = GPT2LMHeadModel.from_pretrained(model_name)\n",
+    "hooked = {}\n",
+    "# Do a recursive search for all modules that are of type \"lookup_modules\" and register the hook\n",
+    "def register_hook(module, hook, lookup_modules = [torch.nn.Linear]):\n",
+    "    for child in module.children():\n",
+    "        if isinstance(child, tuple(lookup_modules)):\n",
+    "            handle = child.register_forward_hook(store_input_hook)\n",
+    "            hooked[child] = handle\n",
+    "        else:\n",
+    "            register_hook(child, store_input_hook, lookup_modules)\n",
+    "\n",
+    "register_hook(model, hooked, lookup_modules = [torch.nn.Linear, type(model.transformer.h[0].mlp.c_fc)])\n",
+    "\n",
+    "print(hooked)\n",
+    "\n",
     "\n",
     "# Example usage\n",
     "input_text = \"Hello, how are you?\"\n",
@@ -78,7 +111,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = [k.input_hooked[0] for k in hooked.keys()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_A = keys[0][0,0]\n",
+    "in_B = list(hooked.keys())[0].weight[:,:4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ref_out = in_A @ in_B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-0.0102,  0.4479,  0.9823, -0.4952], grad_fn=<SqueezeBackward4>)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,17 +169,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Warning: Constant is not supported.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Parse the ONNX model\n",
     "parsed_model, other_ops = parse_onnx(onnx_model)"
@@ -106,20 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ParsedModel(op_type='MatMul', input_shapes=[(1, 12), (12, 12)], output_shapes=[(1, 12)], macs=144, attribute=[], param_shapes=[])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "pdict = {k: v for k,v in parsed_model.items() if v.op_type == 'Gemm' or v.op_type == 'MatMul'}\n",
     "pdict['transformer.h.1.attn.MatMul']"
@@ -127,86 +189,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Duplicate found: transformer.h.0.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.1.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.1.attn.MatMul\n",
-      "Duplicate found: transformer.h.1.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.1.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.1.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.1.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.2.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.2.attn.MatMul\n",
-      "Duplicate found: transformer.h.2.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.2.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.2.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.2.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.3.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.3.attn.MatMul\n",
-      "Duplicate found: transformer.h.3.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.3.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.3.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.3.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.4.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.4.attn.MatMul\n",
-      "Duplicate found: transformer.h.4.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.4.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.4.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.4.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.5.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.5.attn.MatMul\n",
-      "Duplicate found: transformer.h.5.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.5.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.5.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.5.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.6.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.6.attn.MatMul\n",
-      "Duplicate found: transformer.h.6.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.6.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.6.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.6.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.7.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.7.attn.MatMul\n",
-      "Duplicate found: transformer.h.7.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.7.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.7.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.7.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.8.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.8.attn.MatMul\n",
-      "Duplicate found: transformer.h.8.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.8.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.8.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.8.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.9.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.9.attn.MatMul\n",
-      "Duplicate found: transformer.h.9.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.9.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.9.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.9.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.10.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.10.attn.MatMul\n",
-      "Duplicate found: transformer.h.10.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.10.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.10.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.10.mlp.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.11.attn.c_attn.Gemm\n",
-      "Duplicate found: transformer.h.11.attn.MatMul\n",
-      "Duplicate found: transformer.h.11.attn.MatMul_1\n",
-      "Duplicate found: transformer.h.11.attn.c_proj.Gemm\n",
-      "Duplicate found: transformer.h.11.mlp.c_fc.Gemm\n",
-      "Duplicate found: transformer.h.11.mlp.c_proj.Gemm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Write the parsed model to a CSV file\n",
     "write_csv(parsed_model, \"gpt2_gen.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch \n"
    ]
   }
  ],
