add test data to hex

--- a/examples/parse_gpt2.ipynb
+++ b/examples/parse_gpt2.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jeffjw/anaconda3/envs/DWG/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from transformers import GPT2LMHeadModel, GPT2Tokenizer\n",
     "import torch.onnx\n",
@@ -27,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +33,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712afdc0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fd3fac0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3040>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3130>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3760>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3610>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3490>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3340>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3250>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3940>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3d90>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3ac0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a34c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30712a3520>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fe6e760>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fe6e400>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fe6de20>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fe6d910>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071a52b80>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071a52be0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e672b0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67be0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e670d0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e671c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67700>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67fd0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e675e0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e670a0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67d00>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e677c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67fa0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67820>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e673d0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67670>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e676d0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67100>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67310>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e675b0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67b50>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e678e0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67b80>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67970>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e678b0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67790>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67730>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67940>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67130>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071e67370>, Linear(in_features=768, out_features=50257, bias=False): <torch.utils.hooks.RemovableHandle object at 0x7f3071e673a0>}\n"
+      "{Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3070f0f1f0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f524e50>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f5244f0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f5244c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f524460>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f5243d0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f524370>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f524310>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f524190>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f524220>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f5241c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f524070>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f524100>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306f5240a0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f314fa797c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f314fa79370>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3072324670>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3053d0b640>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4af70>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4aee0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4ab50>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4aeb0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4aa30>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a220>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4acd0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a340>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a1c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4ac40>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4ad00>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4ab80>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a2e0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4afa0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a130>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a070>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a280>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4ad60>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4ae80>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a040>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4abe0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4a310>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306fc4ae50>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306eb0d580>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f306eb0ddc0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f3071a524c0>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30725ec670>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30725ec700>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30725ec760>, Conv1D(): <torch.utils.hooks.RemovableHandle object at 0x7f30725ec7c0>, Linear(in_features=768, out_features=50257, bias=False): <torch.utils.hooks.RemovableHandle object at 0x7f30725ec820>}\n"
      ]
     },
     {
@@ -155,6 +146,20 @@
    ],
    "source": [
     "ref_out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to torch file\n",
+    "torch.save({\n",
+    "    'in_A': in_A,\n",
+    "    'in_B': in_B,\n",
+    "    'ref_out': ref_out\n",
+    "}, 'test_data.pth')"
    ]
   },
   {
