--- a/examples/parse_awq.ipynb
+++ b/examples/parse_awq.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jeffjw/anaconda3/envs/DWG/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load model directly\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
@@ -30,24 +21,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "You have loaded an AWQ model on CPU and have a CUDA device available, make sure to set your model on a GPU device in order to run your model.\n",
-      "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "# Load the pretrained model and tokenizer\n",
-    "tokenizer = AutoTokenizer.from_pretrained(\"TheBloke/law-LLM-AWQ\")\n",
-    "model = AutoModelForCausalLM.from_pretrained(\"TheBloke/law-LLM-AWQ\")\n"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -55,6 +32,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "# Load the pretrained model and tokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"TheBloke/law-LLM-AWQ\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"TheBloke/law-LLM-AWQ\")\n",
     "\n",
     "# Attach hook\n",
     "def store_input_hook(module, input, output):\n",
@@ -112,12 +93,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'keys' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m in_A \u001b[38;5;241m=\u001b[39m \u001b[43mkeys\u001b[49m[\u001b[38;5;241m0\u001b[39m][\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      2\u001b[0m in_B \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(hooked\u001b[38;5;241m.\u001b[39mkeys())[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mweight[:,:\u001b[38;5;241m4\u001b[39m] \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m16\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'keys' is not defined"
+     ]
+    }
+   ],
    "source": [
     "in_A = keys[0][0,0]\n",
-    "in_B = list(hooked.keys())[0].weight[:,:4]"
+    "in_B = list(hooked.keys())[0].weight[:,:4] * 16"
    ]
   },
   {
@@ -131,12 +124,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "ref_out"
-   ]
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'in_A' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Save to torch file\u001b[39;00m\n\u001b[1;32m      2\u001b[0m torch\u001b[38;5;241m.\u001b[39msave({\n\u001b[0;32m----> 3\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124min_A\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[43min_A\u001b[49m,\n\u001b[1;32m      4\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124min_B\u001b[39m\u001b[38;5;124m'\u001b[39m: in_B,\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mref_out\u001b[39m\u001b[38;5;124m'\u001b[39m: ref_out\n\u001b[1;32m      6\u001b[0m }, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest_data.pth\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'in_A' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
