adding data generation for adder trees

--- a/examples/parse_gpt2.ipynb
+++ b/examples/parse_gpt2.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Quantize in_B with max_in_B = 7,\n",
+    "# min_in_B = -8\n",
+    "max_in_B = in_B.max()\n",
+    "min_in_B = in_B.min()\n",
+    "scale_in_B = (max_in_B - min_in_B) / 15\n",
+    "in_B = torch.round(in_B / scale_in_B)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-8.)"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "in_B.min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,16 +164,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([-0.0102,  0.4479,  0.9823, -0.4952], grad_fn=<SqueezeBackward4>)"
+       "tensor([-0.6352,  3.1979,  8.6187, -4.9695], grad_fn=<SqueezeBackward4>)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
