--- a/examples/parse_awq.ipynb
+++ b/examples/parse_awq.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jeffjw/anaconda3/envs/DWG/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "# Load model directly\n",
     "from transformers import AutoTokenizer, AutoModelForCausalLM\n",
@@ -18,13 +27,6 @@
     "from workload_generator import parse_onnx, write_csv\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -73,6 +75,16 @@
     "\n",
     "# Export the model to ONNX\n",
     "torch.onnx.export(model, input_ids, onnx_file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer = AutoTokenizer.from_pretrained(\"GPT2-XL\")\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"GPT2-XL\")"
    ]
   },
   {
